--- a/lab-python-functions.ipynb
+++ b/lab-python-functions.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "df908bed-acc6-4b67-b33a-f3b1c564a49f",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,32 @@
     "    Returns:\n",
     "    list: A new list with unique elements from the input list.\n",
     "    \"\"\"\n",
-    "    # your code goes here\n"
+    "    \n",
+    "    \n",
+    "    return list(set(lst))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b0cfd54b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [1,1,1,2,3,3,4,5,6,7,8,6,4,4,4,3]\n",
+    "\n",
+    "get_unique_list(lst)"
    ]
   },
   {
@@ -60,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7d5c8e34-a116-4428-ab9d-e0e15e338fff",
    "metadata": {},
    "outputs": [],
@@ -75,7 +100,39 @@
     "    Returns:\n",
     "    A tuple containing the count of uppercase and lowercase letters in the string.\n",
     "    \"\"\"\n",
-    "    # your code goes here"
+    "    upper = 0\n",
+    "    lower = 0\n",
+    "    \n",
+    "    string = string.replace(\" \", \"\")\n",
+    "    \n",
+    "    for e in string: \n",
+    "        if e.isupper(): \n",
+    "            upper += 1\n",
+    "        else: \n",
+    "            lower += 1\n",
+    "    \n",
+    "    return (f' Uppercase count: {upper}', f'Lowercase count: {lower}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "25203886",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(' Uppercase count: 2', 'Lowercase count: 8')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_case('Hello World')"
    ]
   },
   {
@@ -92,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c15b91d4-cfd6-423b-9f36-76012b8792b8",
    "metadata": {},
    "outputs": [],
@@ -110,6 +167,8 @@
     "    str: The sentence without any punctuation marks.\n",
     "    \"\"\"\n",
     "    # your code goes here\n",
+    "    # Utilizamos string.punctuation que contiene todos los signos de puntuación\n",
+    "    return ''.join(char for char in sentence if char not in string.punctuation)\n",
     "\n",
     "def word_count(sentence):\n",
     "    \"\"\"\n",
@@ -122,7 +181,42 @@
     "    Returns:\n",
     "    int: The number of words in the sentence.\n",
     "    \"\"\"\n",
-    "    # your code goes here"
+    "    # your code goes here\n",
+    "    \n",
+    "    sentence = remove_punctuation(sentence)\n",
+    "    #count = 1\n",
+    "    #for e in sentence: \n",
+    "    #    if e == \" \": \n",
+    "    #       count += 1\n",
+    "            \n",
+    "    #return f'There are {count} words in this sentence'\n",
+    "    \n",
+    "    words = sentence.split() #la convierte en una lista donde cada elemento es una palabra\n",
+    "    return len(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "af62090f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_punctuation('Hola! Que tal? Me alergo--')\n",
+    "\n",
+    "word_count('Hola soy Carlota')\n",
+    "\n"
    ]
   },
   {
@@ -140,12 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f7cfd32a-f559-47ff-81c1-2576bd4fe3bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "word_count(\"Note : this is an example !!! Good day : )\")"
    ]
   },
   {
@@ -168,12 +273,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "57f9afc7-8626-443c-9c3e-eb78ef503193",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here"
+    "# Funciones para las operaciones básicas\n",
+    "\n",
+    "def add(a, b):\n",
+    "    \"\"\"Returns the sum of two numbers\"\"\"\n",
+    "    return a + b\n",
+    "\n",
+    "def subtract(a, b):\n",
+    "    \"\"\"Returns the difference between two numbers\"\"\"\n",
+    "    return a - b\n",
+    "\n",
+    "def multiply(a, b):\n",
+    "    \"\"\"Returns the product of two numbers\"\"\"\n",
+    "    return a * b\n",
+    "\n",
+    "def divide(a, b):\n",
+    "    \"\"\"Returns the division of two numbers\"\"\"\n",
+    "    if b == 0:\n",
+    "        return \"Error: Division by zero\"\n",
+    "    return a / b\n",
+    "\n",
+    "# Función principal 'calculate'\n",
+    "\n",
+    "def calculate(a, b, operator):\n",
+    "    \"\"\"\n",
+    "    This function takes two numbers (a and b) and an operator, \n",
+    "    and performs the appropriate arithmetic operation based on the operator provided.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    a (float): The first operand.\n",
+    "    b (float): The second operand.\n",
+    "    operator (str): A string representing the operation ('+', '-', '*', '/').\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: The result of the arithmetic operation.\n",
+    "    \"\"\"\n",
+    "    if operator == '+':\n",
+    "        return add(a, b)\n",
+    "    elif operator == '-':\n",
+    "        return subtract(a, b)\n",
+    "    elif operator == '*':\n",
+    "        return multiply(a, b)\n",
+    "    elif operator == '/':\n",
+    "        return divide(a, b)\n",
+    "    else:\n",
+    "        return \"Invalid operator! Please use '+', '-', '*', or '/'.\"\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f1194db0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate (2,3, '+')"
    ]
   },
   {
@@ -192,12 +364,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ff3e816c-13ab-447d-a6f2-bb47a8fad2e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here"
+    "# Funciones para las operaciones básicas con múltiples números\n",
+    "\n",
+    "def add(*numbers):\n",
+    "    \"\"\"Returns the sum of multiple numbers\"\"\"\n",
+    "    return sum(numbers)\n",
+    "\n",
+    "def subtract(*numbers):\n",
+    "    \"\"\"Returns the result of subtracting multiple numbers in sequence\"\"\"\n",
+    "    result = numbers[0]\n",
+    "    for num in numbers[1:]:\n",
+    "        result -= num\n",
+    "    return result\n",
+    "\n",
+    "def multiply(*numbers):\n",
+    "    \"\"\"Returns the product of multiple numbers\"\"\"\n",
+    "    result = 1\n",
+    "    for num in numbers:\n",
+    "        result *= num\n",
+    "    return result\n",
+    "\n",
+    "def divide(a, b):\n",
+    "    \"\"\"Returns the division of two numbers\"\"\"\n",
+    "    if b == 0:\n",
+    "        return \"Error: Division by zero\"\n",
+    "    return a / b\n",
+    "\n",
+    "# Función principal 'calculate'\n",
+    "\n",
+    "def calculate(operator, *numbers):\n",
+    "    \"\"\"\n",
+    "    This function takes an operator and a list of numbers, \n",
+    "    and performs the appropriate arithmetic operation based on the operator provided.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    operator (str): A string representing the operation ('+', '-', '*', '/').\n",
+    "    *numbers (float): A sequence of numbers to perform the operation on.\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: The result of the arithmetic operation.\n",
+    "    \"\"\"\n",
+    "    if operator == '+':\n",
+    "        return add(*numbers)\n",
+    "    elif operator == '-':\n",
+    "        return subtract(*numbers)\n",
+    "    elif operator == '*':\n",
+    "        return multiply(*numbers)\n",
+    "    elif operator == '/':\n",
+    "        if len(numbers) == 2:\n",
+    "            return divide(numbers[0], numbers[1])\n",
+    "        else:\n",
+    "            return \"Division only supports 2 numbers!\"\n",
+    "    else:\n",
+    "        return \"Invalid operator! Please use '+', '-', '*', or '/'.\"\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -315,13 +541,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "a1d55cea-96c3-4853-8220-17c0904a8816",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here"
+    "def fibbonaci(n): \n",
+    "    if n<=0: \n",
+    "        return 0\n",
+    "    elif n == 1: \n",
+    "        return 1\n",
+    "    else: \n",
+    "        return fibbonaci(n-1)+ fibbonaci(n-2)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9cc23695",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibbonaci(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "dd4c73fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28657"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibbonaci(23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42213c1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -340,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
